protect key